fix: z-index img select mennu

--- a/src/components/SelectMenu/styles.scss
+++ b/src/components/SelectMenu/styles.scss
@@ -33,7 +33,7 @@
 
   img {
     position: absolute;
-    z-index: 1000;
+    z-index: 1;
     top: 15%;
     left: 3%;
     width: 28px;
